chore: 读书笔记 哲学家们都做了什么 - 异教徒们

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -45,3 +45,9 @@ category: 读书笔记
 夜里，君士坦丁又梦到基督要他把十字架的符号放到军旗上，他照做了。并在随后的大战中，彻底击败对手，占领罗马城，成为了西罗马的皇帝。当政后，颁布了注明的米兰敕令: 保护基督徒不再受到迫害，并且鼓励基督教的发展。后来，随着他征服东罗马帝国，基督教开始在整个帝国内流行起来。不久以后，基督教成为了罗马的国教。  
 
 ## 异教徒们
+上面提到了，宗教和哲学在根本上难以调和，尤其当流行的宗教是基督教时: 它尤其不能接受哲学没完没了的质疑。成为国教后，便开始了对哲学研究和其他思想的迫害，这就是有名的黑暗中世纪。  
+基督教徒们自415年冲入亚历山大图书馆进行破坏，到公元529年关闭柏拉图书院，哲学在欧洲就几乎灭绝了踪迹: 几乎所有的典籍都被摧毁。而受到压迫的学者们开始了向帝国的边缘的逃难: 现今的土耳其、叙利亚附近，这有强大的异民族国家: 波斯帝国，因而宗教氛围较弱，不会受到苛责的压迫。这样的局面维持了百余年，传来了不幸的消息: 波斯帝国灭亡了，取而代之的是由另一群异教徒建立的阿拉伯帝国。这群可怜的哲学家就被压在两帮一神教国家中间，恐惧于不知何时会灭亡的命运。  
+不久，阿拉伯帝国就征服了学者们所在的地区。出人意料的是，阿拉伯人对于学者们采取了异乎寻常的宽容政策: 公元830年，阿拉伯人在巴格达建立了智慧之家的图书馆，有着如亚历山大一般的愿望: 收集全天下的图书。这是一个伟大的教育、学术机构: 没有信仰、种族的限制，学者们在这里可以尽情的贡献自己的智慧。聚集的学者们开启了著名的百年翻译运动，这场历史二百年的深刻的影响了当今的世界。  
+于此同时，两个异教徒帝国也展开了彼此的斗争，九次十字军东征就发生在这个时期。历史奇幻的地方也在这里发生了: 阿拉伯帝国试图打败东罗马帝国虽然没有成功，但是透过地中海，他们却占领了西班牙。一东一西、把基督徒们包住了，这些哲学著作也随之传递到了西班牙，这些传递过去的著作，本身的经历也很奇幻: 学者们将希腊著作由拉丁文翻译为叙利亚文、再翻译为阿拉伯文、再翻译为西班牙文、再翻译为拉丁文。  
+
+## 神们自己
