--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -10,7 +10,7 @@ category: 读书笔记
 多年后，偶然读起《哲学家们都干了些什么？》，才发现真实世界外竟然还有这么个有趣的哲学世界。当然，哲学世界庞大无比，这里也仅想记录读书的心得。
 
 ## 讨人厌的哲学
->> 我只知道自己一无所知。 -- 苏格拉底  
+> 我只知道自己一无所知。 -- 苏格拉底  
 
 儒家崇尚圣贤之道，这里的圣贤就是孔孟。同样，西方的哲学，也有圣贤。那就是苏格拉底。  
 苏格拉底、古希腊人、是一个非常惹人厌的人。在古代，人人信仰宗教的年代，他却信仰道德、理性这个新神，他智力超然，又善于辩论，经常与人争辩万事万物的本质，并发出质疑的提问: 你说XX是什么，他就反问，难道XX就不可以是这样的么？  
@@ -18,15 +18,17 @@ category: 读书笔记
 这么一个讨厌的人，却哲学的创始人。以他为界，哲学被划分为了两个时代。
 
 ## 征服者  
->> 唯一的好是知识，唯一的恶是无知。 -- 柏拉图  
->> 无畏的人才能获得真正的自由。 -- 亚里士多德    
+> 唯一的好是知识，唯一的恶是无知。 -- 柏拉图  
+> 无畏的人才能获得真正的自由。 -- 亚里士多德    
+
 柏拉图是苏格拉底的学生，在雅典开办了柏拉图学院，传授各种知识给学生，在无数的学生中，有一位叫做亚里士多德的马其顿人，而这位学生回到马其顿后又收了一位名叫亚历山大的王子作为学生，果然是名师出高徒。  
 在柏拉图的晚年，马其顿崛起，亚历山大继承王位，率军征伐，刀锋所向，皆被征服。雅典也不例外，被占领后城内的学者极度恐慌: 马其顿一直被雅典视为野蛮人，马其顿的征服遇到了以雅典为首的希腊城邦联盟激烈抵抗，而马其顿又刚将反叛的底比斯屠城，我们的文化将何去何从？  
 所幸的是，亚历山大对治下的不同文化极度重视，并没有粗暴统治，他像一个学者一样，建立了亚历山大图书馆，以收藏全世界的书。历史仿佛开了个玩笑，同时代的东方完全相反的路，一个叫做“秦”的帝国正在崛起，在嬴政的带领下，一统六合八荒，统一文字，焚书坑儒。中国古代文化思想的先哲们，也许会在云端望着同时代西方发生的事情，有所感叹吧。  
 亚历山大帝国后来被更强大的罗马帝国替代，后者同样奉行包容政策，使得帝国最终在历史的长河里，破碎成众多民族国家。  
 
 ## 护教先锋
->> 上帝之子死了，虽然是不合理的，却是可以相信的。埋葬以后又复活了，虽然是不可能的，却是肯定的。正因为荒谬，所以我才相信。  
+> 上帝之子死了，虽然是不合理的，却是可以相信的。埋葬以后又复活了，虽然是不可能的，却是肯定的。正因为荒谬，所以我才相信。  
+
 罗马是一个奇特的国家: 法制化、民主的奴隶制社会。内在的特性也反射到对外的征伐中，通过强大的武力打败蛮族后，却又包容的吸收蛮族的文化，接纳蛮族的神灵将之安放在万神殿内。在被罗马打败的无数民族中，却有一个宗族信奉着奇特的宗教: 犹太教。没错，犹太人也是罗马治下的公民，但他们的宗教却与别的宗教有所不同，犹太教只有唯一真神: 上帝，且不接受人们膜拜其他的神，将这些神成为伪神，膜拜伪神是要遭罚的。  
 本来大家的神都和和气气，突然来了这么一个排外的主，当然会被人侧目。犹太教是怎么排外的呢，举个例子: 基督教是从犹太教衍生出来的宗教，它们甚至共用经书: 《旧约》，两者的区别是，基督教相信《新约》，而《新约》说的是耶稣降生之后的事情。在基督教诞生初期，犹太教对其进行打击，有个犹太教徒叫做保罗，和耶稣是同代人，受到教长的指示去迫害基督徒，在途中，被耶稣启示，皈依了基督教。同门尚且内斗如此，可想后来中世纪宗教支配的时候，是何等的盛况！   
 皈依后的保罗，做了一件极重要的事，将基督教向犹太人以外的民族传播。而在此之前，无论基督教、犹太教都是犹太人的专利。  
@@ -34,10 +36,9 @@ category: 读书笔记
 好运在公元64年7月17日夜里结束，当天，罗马城发生了一场大火，烧了六天七夜，将三分之二的罗马烧为灰烬。当时的罗马皇帝尼禄宣称这是基督徒放的火。从此对基督教的打击也拉开了序幕: 保罗自此在史书上消失了踪迹，基督徒也开始受到残酷的迫害。  
 早期的基督教相信世界很快就会毁灭，所以大多数人并不热衷传教，也不建立教堂，撰写经文。只搞一些宗教聚会，很少和异教徒进行交流。在罗马，一个特立独行，排斥他人又保守沉默的宗教当然不受他人待见，更别论向外界传教。保罗作为罗马人，拥有良好的哲学素养，善于辩论。为了传教，他书写了大量的神学相关文章，唤作《保罗书信》，后来成为了《圣经》的一部分。利用哲学进行传教，自保罗始，后续越来越多的基督徒参与其中。正因为他们的工作，基督教才具备了完备的宗教理论基础，而同时期的大量其他宗教，则慢慢的衰落了。历史管这时期的哲学为教父哲学。  
 利用宗教为基督教夯实基础，举个重要的例子: 基督教义说《圣经》说上帝是全知、全能和全善的，那为什么会允许人间存在这么多丑恶和痛苦？一位叫做奥古斯丁的基督徒给出了解释:  
-``` text
-上帝是善的，而上帝的善表现在上帝对人类的行为要进行公正的赏罚。那么既然要赏罚，前提就是人类必需拥有自由意志，必须能自己选择行善还是作恶，否则人类就不应该对自己的行为负责。
-上帝给了亚当和人类自由意志，所以也必须让人类拥有作恶的可能。
-```
+
+> 上帝是善的，而上帝的善表现在上帝对人类的行为要进行公正的赏罚。那么既然要赏罚，前提就是人类必需拥有自由意志，必须能自己选择行善还是作恶，否则人类就不应该对自己的行为负责。上帝给了亚当和人类自由意志，所以也必须让人类拥有作恶的可能。  
+
 但宗教和哲学在根本上无法协调。宗教要求信仰，哲学要求怀疑。后续多个世纪，哲学将以宗教的工具不断出现，直到一批哲人将其脱离出来，反攻宗教。
 
 ## 神的天下
@@ -48,6 +49,10 @@ category: 读书笔记
 上面提到了，宗教和哲学在根本上难以调和，尤其当流行的宗教是基督教时: 它尤其不能接受哲学没完没了的质疑。成为国教后，便开始了对哲学研究和其他思想的迫害，这就是有名的黑暗中世纪。  
 基督教徒们自415年冲入亚历山大图书馆进行破坏，到公元529年关闭柏拉图书院，哲学在欧洲就几乎灭绝了踪迹: 几乎所有的典籍都被摧毁。而受到压迫的学者们开始了向帝国的边缘的逃难: 现今的土耳其、叙利亚附近，这有强大的异民族国家: 波斯帝国，因而宗教氛围较弱，不会受到苛责的压迫。这样的局面维持了百余年，传来了不幸的消息: 波斯帝国灭亡了，取而代之的是由另一群异教徒建立的阿拉伯帝国。这群可怜的哲学家就被压在两帮一神教国家中间，恐惧于不知何时会灭亡的命运。  
 不久，阿拉伯帝国就征服了学者们所在的地区。出人意料的是，阿拉伯人对于学者们采取了异乎寻常的宽容政策: 公元830年，阿拉伯人在巴格达建立了智慧之家的图书馆，有着如亚历山大一般的愿望: 收集全天下的图书。这是一个伟大的教育、学术机构: 没有信仰、种族的限制，学者们在这里可以尽情的贡献自己的智慧。聚集的学者们开启了著名的百年翻译运动，这场历史二百年的深刻的影响了当今的世界。  
-于此同时，两个异教徒帝国也展开了彼此的斗争，九次十字军东征就发生在这个时期。历史奇幻的地方也在这里发生了: 阿拉伯帝国试图打败东罗马帝国虽然没有成功，但是透过地中海，他们却占领了西班牙。一东一西、把基督徒们包住了，这些哲学著作也随之传递到了西班牙，这些传递过去的著作，本身的经历也很奇幻: 学者们将希腊著作由拉丁文翻译为叙利亚文、再翻译为阿拉伯文、再翻译为西班牙文、再翻译为拉丁文。  
+于此同时，两个异教徒帝国也展开了彼此的斗争，九次十字军东征就发生在这个时期。历史奇幻的地方也在这里发生了: 阿拉伯帝国试图打败东罗马帝国虽然没有成功，但是透过地中海，他们却占领了西班牙。一东一西、把基督徒们包住了，这些哲学著作也随之传递到了西班牙。基督徒在久攻不下后，反而也想起了仿照阿拉伯人的翻译活动，好在精神上也征服对手。于是希腊著作经历了由拉丁文翻译为叙利亚文、再翻译为阿拉伯文、再翻译为西班牙文、再翻译为拉丁文的神奇旅程。  
 
 ## 神们自己
+基督教是如此的成功，以至于以它为国教的罗马都灭亡了，基督教却更加的兴盛发展。这带来了诸多对于神学的讨论。那个时候的讨论可不想现在轻松，失败方可能会被冠以异端的名号而被火邢。于是参与双方都想尽办法以取得在争论的优势，哲学再一次以工具的形式流行开来。哲学是如此的好用，以至于教皇在1215年还禁止传授亚里士多德的知识，到1260年亚里士多德已经成为教会学校的必修课。这段时期的哲学成为“经院哲学”。经院哲学的学者们执着于通过哲学手法，也就是理性，去证明上帝的存在。当这些神学家们试图证明上帝存在的时候，这同时也意味着上帝可能不存在，而按照教义，基督徒绝不能质疑上帝的存在。那么可以说，从神学家们把哲学引入神学的一瞬间起，他们就已经开始背离自己的信仰了。值得一提的是，在这批神学家中，有位叫做奥卡姆的提出了剃刀理论。经院哲学自身成就较低，绝大多数都是围绕着神进行讨论，但这却为哲学思想流传下来提供了空间。作者在书里说的很好: 
+
+> 对于文明来说，一国的衰亡不那么可怕。可怕的是焚书，是毁掉学校，是用暴力消灭言论。打败仗了没关系，只要人民幸福就行。而让人民获得幸福的方法，就在千百万文弱书生舍去生命保护的一本本书、一张张纸中。
+敬字惜纸，这不是书呆子话，这是文明之路。 -- 林欣浩  
