--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -56,3 +56,11 @@ category: 读书笔记
 
 > 对于文明来说，一国的衰亡不那么可怕。可怕的是焚书，是毁掉学校，是用暴力消灭言论。打败仗了没关系，只要人民幸福就行。而让人民获得幸福的方法，就在千百万文弱书生舍去生命保护的一本本书、一张张纸中。
 敬字惜纸，这不是书呆子话，这是文明之路。 -- 林欣浩  
+
+## 天国王朝
+古代欧洲和中国有两个明显的不同: 1) 欧洲有强大的宗教基础 2) 欧洲的王权远不如中国的皇权强大。  
+中国古人一直对神明抱着实用主义的态度，有需要的时候则取过来，否则束之高阁，也无什么严格的清规戒律，明清的小说不止一次出现过，佛道共处，神仙也如人一样勾心斗角。但是皇权则是极为强大: 文字狱、株连等等不一而足。  
+而中世纪的欧洲则相反，部下的部下不是我的部下，王权相对松散，而教权则十分集中: 罗马的教皇拥有最终解释权，各地的主教则垄断了当期的解释权。强有力的宗教机构为了避免异端学说流行于世，建立了宗教裁判所。这是一个从头到尾都流散着虚伪的机构: 爱和宽恕是基本教义，但是教皇亚历山大四世却通过教令宽恕了审判官的用刑。为了避免滥用刑法，所以要求用刑以一次为宜，于是每次审判都会来一次用刑。为了防止用刑的审判不公正，设立了重审制度，然后犯人在重审中接着受刑。为了审判公正，要求审判必须要有证人，但又要求证人只能说对犯人不利的证词。为了不担上惩罚罪人的恶名，要求罪犯必须在受罚前，签保证书说是自己自愿要求受罚的。最后教会为了远离血腥，不能杀人，所以将所有除以极刑的犯人都交于政府处理，并嘱咐不能见血，建议使用火邢。  
+所以从理论上讲，宗教裁判所没有迫害、处罚、监禁、杀死过任何一个犯人。可谓是极佳的黑色笑话了。  
+
+## 信仰与反叛
