chore: 博客添加背景、修复图像缺失问题

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -2,7 +2,7 @@
 title: 【读书笔记】哲学家们都干了些什么？
 date: 
 tags: 读书笔记
-category: 读书笔记
+categories: 读书笔记
 ---
 
 小时候的记忆中，哲学就是讨论真理的学科，研究者们皓首穷经在试图寻找世界的“道”，最终却找出了一个又一个的悖论，除此以外，对哲学更多的了解，就是一个个哲学家的趣事
