chore: 信仰与反叛

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -63,4 +63,10 @@ categories: 读书笔记
 而中世纪的欧洲则相反，部下的部下不是我的部下，王权相对松散，而教权则十分集中: 罗马的教皇拥有最终解释权，各地的主教则垄断了当期的解释权。强有力的宗教机构为了避免异端学说流行于世，建立了宗教裁判所。这是一个从头到尾都流散着虚伪的机构: 爱和宽恕是基本教义，但是教皇亚历山大四世却通过教令宽恕了审判官的用刑。为了避免滥用刑法，所以要求用刑以一次为宜，于是每次审判都会来一次用刑。为了防止用刑的审判不公正，设立了重审制度，然后犯人在重审中接着受刑。为了审判公正，要求审判必须要有证人，但又要求证人只能说对犯人不利的证词。为了不担上惩罚罪人的恶名，要求罪犯必须在受罚前，签保证书说是自己自愿要求受罚的。最后教会为了远离血腥，不能杀人，所以将所有除以极刑的犯人都交于政府处理，并嘱咐不能见血，建议使用火邢。  
 所以从理论上讲，宗教裁判所没有迫害、处罚、监禁、杀死过任何一个犯人。可谓是极佳的黑色笑话了。  
 
-## 信仰与反叛
+## 信仰与反叛  
+> 我不以福音为耻，这福音本是神的大能，要救一切相信的，先是犹太人，后是希腊人。因为神的义正在这福音上显明出来，这义是本于信以至于信，如经上所记：“义人必因信得生。” --《罗马书》  
+
+中世纪的宗教除了虚伪外，还十分的富有，垄断了人们的思想、文化生活，发财的手段多着呢: 著名的赎罪券，什一税，代立遗嘱，将平民的所有资产都转移到教会，号召百姓募捐等等不一而足。同时为了维持这种垄断，教会规定平民不能私自拥有圣经，起初是因为早期的圣经都是由拉丁文写成的，平民的基本无法解读，再者早期的书籍是通过羊皮纸记录，价格极为高昂，普通人也完全无法负担。但是禁令颁布的时期，造纸术已经流行开来，圣经也翻译为多种语言。无疑，教会仍然希望能独占对上帝的解释权。  
+在教会苦心维持的祥和下，一位叫马丁路德的人率先开火了，他质疑罗马教皇的权威，质疑教会对上帝的解释的独占。为此他写了大量的宗教文章，与教宗隔空开战。有人会说，不对啊，这不得给抓到宗教审判所么？而路德没有进去的原因正是，他所在地区的民众和贵族都支持他。中世界是教权和皇权冲突最为严重的时代，教权的扩张挤压了皇权，而横征暴敛又激起了民怨。这时路德站出来，对大家说，教皇的这些敛财方式和上帝没有关联，完全是教会的教士们的行为，他批判赎罪券，也指责教皇，说教皇是代表罗马民族，对日耳曼民族进行压迫。这些用德语写成的文章拨开了日耳曼人的怒火，他们纷纷支持路德，掀起了更大的论战。罗马教皇恼羞成怒，竟将整个日耳曼民族开除出教，这愚蠢的行为，让日耳曼人哭笑不得，随后他们也宣布将教皇开除出教。这场论战因此也在无法停止，越烧越大，席卷欧洲，将基督教分成两个: 新教和天主教。  
+虽然天主教拿路德没有什么办法，但是对于那些敢于认同的新教的普通人，就毫不手软，将他们一一送上火刑架！路德和他的同僚们，如加尔文(后来的新教教宗)，也争锋相对的用哲学武器去和天主教继续战斗。可惜，哲学在这场宗教纷争里，也只是武器。新教和天主教纵有千万的不同，但是却能联手召开宗教审判所去对付那些哲学的思想者们。  
+人们去通过哲学认识这个美丽的世界，去思考改变世界的日子，还要继续往后。   
