chore: 修改没有tags和category问题

--- a/source/_posts/科学养膝.md
+++ b/source/_posts/科学养膝.md
@@ -1,8 +1,10 @@
 ---
 title: 科学养膝
 date: 2022-05-10 14:25:20
-tags: 运动
-categories: 运动
+tags:
+- 生活
+categories:
+- 运动
 ---
 
 膝盖，作为人体最大最复杂的承重关节。它的“设计使用寿命”约为60年，“到期”以后，各种膝盖疾病患病率大幅上升，在我国膝关节炎患者人数达1.2亿。
