chore: 修改文章摘要和图片

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -1,6 +1,8 @@
 ---
 title: 【读书笔记】哲学家们都干了些什么？
 date: 
+excerpt: 李约瑟为什么科学和工业革命没有在近代的中国发生，从哲学的诞生过程，我们也许可以看到端倪。
+photos: '../images/【读书笔记】哲学家们都干了些什么.jpg'
 tags:
 - 哲学
 categories:
@@ -8,6 +10,7 @@ categories:
 ---
 
 小时候的记忆中，哲学就是讨论真理的学科，研究者们皓首穷经在试图寻找世界的“道”，最终却找出了一个又一个的悖论，除此以外，对哲学更多的了解，就是一个个哲学家的趣事
+<!--more-->
 例如有位叫罗素的人，通过一部《西方哲学史》获得诺贝尔文学奖。这引发了幼年我的极大困惑，为什么单写了一本历史书就能获得文学奖，再说哲学和文学不是分开的学科吗？不过随着更多好玩的事和课业的压力，我很快就将疑惑抛之脑后。  
 多年后，偶然读起《哲学家们都干了些什么？》，才发现真实世界外竟然还有这么个有趣的哲学世界。当然，哲学世界庞大无比，这里也仅想记录读书的心得。
 
