--- a/source/_posts/科学养膝.md
+++ b/source/_posts/科学养膝.md
@@ -1,12 +1,15 @@
 ---
 title: 科学养膝
 date: 2022-05-10 14:25:20
+excerpt: 我曾经是一个冒险者，直到我的膝盖中了一箭。 -- 上古卷轴NPC
+photos: '../images/xg-1.jpeg'
 tags:
 - 生活
 categories:
 - 运动
 ---
 
+<!--more-->
 膝盖，作为人体最大最复杂的承重关节。它的“设计使用寿命”约为60年，“到期”以后，各种膝盖疾病患病率大幅上升，在我国膝关节炎患者人数达1.2亿。
 人体的关节是由纤维结缔组织、 软骨与骨连接形成，外面包裹着关节囊，与关节构成了一个封闭的关节腔，这个空间里存储着关节滑液，起到润滑、缓冲的作用，使得我们能够活动自如。
 
