--- a/source/_posts/聊聊中国货币史.md
+++ b/source/_posts/聊聊中国货币史.md
@@ -1,12 +1,15 @@
 ---
 title: 聊聊中国货币史
 date: 2022-06-10 18:04:45
+excerpt: 带你10分钟快速了解中国古代钱币历史。
+photos: '../images/hb-8.png'
 tags:
 - 历史
 categories:
 - 历史
 ---
 
+<!--more-->
 ### 货币的形成
 在古代，人们通过渔猎种植进行生产收获。因为生产力限制，需要进行以物易物的交易来交换需要的物资。随着交换越发频繁和复杂，人们创造出了最初的货币。<br />在中国，最初的货币形式是贝币，人们通过将收集来的海贝(如 [黄宝螺](https://baike.baidu.com/item/%E9%BB%84%E5%AE%9D%E8%9E%BA/5912330?fromtitle=%E8%B4%A7%E8%B4%9D&fromid=2339214&fr=aladdin))，通过磨平打孔方式制成货币。<br />![各种类型的贝币](../images/hb-1.png)<br />请思考: 中国古代文明的发源地是黄河流域，而贝币主要是海贝，这是为什么？<br />
 ![各类型贝币](../images/hb-2.jpeg)<br />不同材质的贝币<br />在货币出现后数百年间，随着商品经济的发展，天然的贝壳作为货币渐渐供不应求了，于是出现人工贝币，如石贝币、骨贝币、蚌贝币等。到了商代晚期，出现了用铜质的金属贝币
