chore: 奇怪的论调

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -75,3 +75,20 @@ categories:
 在教会苦心维持的祥和下，一位叫马丁路德的人率先开火了，他质疑罗马教皇的权威，质疑教会对上帝的解释的独占。为此他写了大量的宗教文章，与教宗隔空开战。有人会说，不对啊，这不得给抓到宗教审判所么？而路德没有进去的原因正是，他所在地区的民众和贵族都支持他。中世界是教权和皇权冲突最为严重的时代，教权的扩张挤压了皇权，而横征暴敛又激起了民怨。这时路德站出来，对大家说，教皇的这些敛财方式和上帝没有关联，完全是教会的教士们的行为，他批判赎罪券，也指责教皇，说教皇是代表罗马民族，对日耳曼民族进行压迫。这些用德语写成的文章拨开了日耳曼人的怒火，他们纷纷支持路德，掀起了更大的论战。罗马教皇恼羞成怒，竟将整个日耳曼民族开除出教，这愚蠢的行为，让日耳曼人哭笑不得，随后他们也宣布将教皇开除出教。这场论战因此也在无法停止，越烧越大，席卷欧洲，将基督教分成两个: 新教和天主教。  
 虽然天主教拿路德没有什么办法，但是对于那些敢于认同的新教的普通人，就毫不手软，将他们一一送上火刑架！路德和他的同僚们，如加尔文(后来的新教教宗)，也争锋相对的用哲学武器去和天主教继续战斗。可惜，哲学在这场宗教纷争里，也只是武器。新教和天主教纵有千万的不同，但是却能联手召开宗教审判所去对付那些哲学的思想者们。  
 人们去通过哲学认识这个美丽的世界，去思考改变世界的日子，还要继续往后。   
+
+## 奇怪的论调  
+> 人和动物的区别在于人要思考。   
+
+宗教的大厦，建立初期往往面临着巨大的压迫，但是信徒仍然前仆后继，这是因为宗教为所有信众描述了无比美好的世界: 
+
+> “它讲博爱，不讲仇恨；它讲宽恕，不讲怨愤；它讲施予，不讲索取；它讲众生平等，教徒不分贵贱，都如兄弟姐妹一般” 
+
+那么，美好的教义、虔诚的教徒为什么会滋养出中世纪残酷的宗教审判所呢？我们大可以说，是教会误解了教义，抛弃了宽恕。但是教义中又确实写了要摈弃异端，如果教会仍由异端横行，那么教义中描述的美好世界就会破碎。而且从教会的角度看，也确实给与了异端宽恕: 他们可以选择变换信仰，既得到了信仰的幸福，也得到了宽恕，多好！  
+假设这一切都会按照符合教会预期的进行，那么将会出现一个由基督光芒照耀的世界，一个不存在科学、哲学、非宗教的艺术的世界，但是这个宗教的所有人都会很幸福。  
+那么，这样的社会是需要保护的，还是要改变的？  
+选择后者就要面对一个更加有道德压力的问题: 为什么容忍异端比全体人民的幸福还要重要？  
+为了回答这个问题，我们先试试想下，我们为什么要学习哲学？  
+我们学习哲学是为了了解人生的意义？追求人生的幸福？是吗？哲学和科学一样，都有现成的产品供我们选择: 我们可以直接买电冰箱，而不用去了解《热力学原理》。当邻居大妈默念“人的命天注定”的时候，她信奉的是宿命论和决定论；当朋友在酒桌上劝你“赚钱有什么用，钱再多早晚也是一个死”的时候，他讲的是虚无主义；当人生感悟型的散文告诫你“当下最重要，活出你自己”的时候，它其实就是萨特的代言人，当然这些也不需要你去学习哲学著作。   
+假使你明白了这些，却仍然拿起了书，想要去探索一番真实情况。恭喜你，你选择的路，苏格拉底也曾走过。  
+人不是动物，人能思考。他不会因为面前的享乐就放弃思考。当年苏格拉底宁愿死，也不愿意放弃怀疑，为什么？因为怀疑是思考的起源，也是思考结果的检验器。怀疑可以避免独断的结论，让我们可以更近的靠近真相。  
+也正是照这个标准思考，西方人才有了哲学，才有了科学，才制造了飞机和电脑。
