--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -92,3 +92,16 @@ categories:
 假使你明白了这些，却仍然拿起了书，想要去探索一番真实情况。恭喜你，你选择的路，苏格拉底也曾走过。  
 人不是动物，人能思考。他不会因为面前的享乐就放弃思考。当年苏格拉底宁愿死，也不愿意放弃怀疑，为什么？因为怀疑是思考的起源，也是思考结果的检验器。怀疑可以避免独断的结论，让我们可以更近的靠近真相。  
 也正是照这个标准思考，西方人才有了哲学，才有了科学，才制造了飞机和电脑。
+
+## 从怀疑开始  
+> 我思故我在。 -- 笛卡尔
+
+荷兰，又名尼德兰共和国，是一个低地国家，欧洲的几条主要河流入海口均汇聚于此，因而农业水平较差，但水运交通极为便利，商业发达。  
+16世纪，西班牙作为实力最强，宗教势力尤为强盛的国家，正在欧洲四处讨伐异端，荷兰也是被讨伐的对象: 荷兰商业发达，人员流动巨大，当地有从全欧州各地来的异见人士、科学家、哲学家。荷兰的统治者对外来人士十分宽容，以维持商业的展，这和农业社会为了保持稳定，采取严厉管制是一样的原理。  
+西班牙的征伐激起了荷兰的反抗，斗争一波接着一波。在英国打败西班牙无敌舰队，法国打败西班牙陆军后，荷兰才终于成功独立。独立后，为了选出国王，各部的人员纷纷推荐人选。前面也说道了，荷兰是商业国家，各部分推选的人选均有很强的地方色彩，不能一致。最终，各地同意建立共和国，以议会为最高统治机构。近代的第一个资本主义国家就这么出现了。  
+荷兰有着当时欧洲最自由的氛围，很多学者都定居于此，其中有位叫做笛卡尔的哲学家，他是一个天生的思考着，还在教会上学的时候，就认定学校里的课程处了数学，别的并无价值。他怀疑着所学的课程，并决意自己去探索这个世界，用他的话就是，亲身去读“世界这本大书”。  
+荷兰是他探索世界的终点站，他定居于此，开始了自己对哲学的探究，他探究的第一个问题就是: 我身处的这个世界，到底是不是真实的呢？  
+这是一个古往今来，无数人都想过的问题，笛卡尔对这个问题给与了肯定的答复:   
+> “不管我再怎么怀疑，“我怀疑”这件事是确定的，它肯定存在吧。也可以说，只要有了怀疑的念头，那么“我”肯定是存在的——“我”要是不存在就不会有这些念头了”。
+
+这就是著名的我思故我在的意思，很多人将它误解为我思考所以我存在，其实笛卡尔想说的是，因为我可以怀疑，所以我应该是存在的。这是一个推理演绎关系，也是西方哲学的精妙所在: 怀疑+逻辑推理。东方哲学则不同，采用了很多寓言式故事，跳过推理的过程，直接得到答案。而答案自身，是否经得起推敲，自然也是值得思考的(怀疑)。  
