--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -105,3 +105,15 @@ categories:
 > “不管我再怎么怀疑，“我怀疑”这件事是确定的，它肯定存在吧。也可以说，只要有了怀疑的念头，那么“我”肯定是存在的——“我”要是不存在就不会有这些念头了”。
 
 这就是著名的我思故我在的意思，很多人将它误解为我思考所以我存在，其实笛卡尔想说的是，因为我可以怀疑，所以我应该是存在的。这是一个推理演绎关系，也是西方哲学的精妙所在: 怀疑+逻辑推理。东方哲学则不同，采用了很多寓言式故事，跳过推理的过程，直接得到答案。而答案自身，是否经得起推敲，自然也是值得思考的(怀疑)。  
+
+## 理性主义
+在笛卡尔生活的那个年代，学校里教授的仍是欧式几何: 由几条公理、公设为根基，推断出的庞大的几何世界。这个世界无比神奇，现实世界中找不到完全符合描述的物体，但是这些几何规则却又无处不在，具有神秘性和超然性，令当时的学者们心驰神往。因此，当时的哲学家们，认为世界上也同样存在一种超越客观世界的理性，就和几何学一样。  
+笛卡尔作为一个伟大的数学家，他同样也是这么想的。于是，他将几何学的规则应用到哲学上，先寻找一些不言自明的公论、公理。然后基于这些为世间万物寻找一个能包容它们的哲学体系。  
+笛卡尔是这么做的:  
+<b><i>前提: “我思故我在”  
+我是存在的，但我是在怀疑的，这就味着我不是完满的。因为完满的东西是不会怀疑的。  
+但是我心中有一个完满的概念，否则我就不会意识到我是不完满的了。  
+既然我自己是不完满的，那这个完满的概念肯定不能来自于我自己，必然来自于一个完满的事物。什么事物是完满的呢，那只能是上帝。  
+推出这世界上有上帝。  
+又因为上帝是完满的，所以上帝是全知、全能、全善的，那么上帝一定不会欺骗我，不会让我生活的世界都是幻觉。所以我生活在真实的世界里。</i></b>   
+虽然这个推论很多地方不完善，但是从这里，哲学家们开始他们对认知世界的哲学体系的建设。  
