chore: 形而上学、二元论

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -117,3 +117,13 @@ categories:
 推出这世界上有上帝。  
 又因为上帝是完满的，所以上帝是全知、全能、全善的，那么上帝一定不会欺骗我，不会让我生活的世界都是幻觉。所以我生活在真实的世界里。</i></b>   
 虽然这个推论很多地方不完善，但是从这里，哲学家们开始他们对认知世界的哲学体系的建设。  
+
+## 形而上学
+笛卡尔所做的关系到哲学史上一个重要的概念: 形而上学。形而上学，指的是研究超越物理世界规则之上的道理，比如究竟什么事物是真实存在的？这本书后续用了大量的篇章介绍形而上学。  
+
+## 二元论
+前面说过笛卡尔试图基于公理建设认知世界的哲学框架，他将世界分成了“我”和除此以外的东西。这种对世界的认知方式，称作二元论。二元论的核心点是，二元之间是如何联系起来的，即: "我(心灵)"和物质世界的关系，是如何相互影响的，诸如此类。  
+书里没有过多讨论二者的关联，反而聊起了二元论作为一种世界观，对于我们的用途: 强大的心里安慰，和为什么:  
+人的一切体验，分为精神和感官的。而感官的体验，无论是疼痛、羞辱、饥饿，还是别的什么，最终也是化为精神上的感受。而且感官体验是有很强的边际递减的，比如让富人吃很大的鱼翅，和普通的鱼翅相比，体验很难说有什么大的变化。  
+因此，感官上除了死，别的感受，都是可以逐步逐渐的转化为精神感受的，而在心灵世界，我们是无敌的。  
+所以用二元论去看待世界，某种意义上，我们就是世界的主宰，能够给人很大的安全感。  
