chore: 唯我论和目的论

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -127,3 +127,9 @@ categories:
 人的一切体验，分为精神和感官的。而感官的体验，无论是疼痛、羞辱、饥饿，还是别的什么，最终也是化为精神上的感受。而且感官体验是有很强的边际递减的，比如让富人吃很大的鱼翅，和普通的鱼翅相比，体验很难说有什么大的变化。  
 因此，感官上除了死，别的感受，都是可以逐步逐渐的转化为精神感受的，而在心灵世界，我们是无敌的。  
 所以用二元论去看待世界，某种意义上，我们就是世界的主宰，能够给人很大的安全感。  
+
+## 唯我论和目的论
+二元论进一步可以得到唯我论: 我们只能确认"我"是真实存在的，但是对于外在的物质世界，却不能确认。作为一种哲学思想，确实很荒谬: 如果不能确认外在的世界到底是不是真实的，那你不吃不喝一个试试。  
+但是唯我论也是有它独到的作用，尤其是当它和目的论结合起来后。目的论是一种将万事万物的存在归结于某种原因的的世界观。试想一下，有一个既相信唯我论，又相信目的论的人，他会怎么看这个世界？首先作为精神世界的主宰，他肯定是至高无上的，而身边的一切又是为了什么而存在的，很容易推断出，是为了他而存在的。于是忽的一下，他就蜕变成了神，人间神。是不是一个很新奇的人生观？仔细想想，虽然荒谬，却又有神秘的美感~
+
+## 寒冬夜行人
