chore: 寒冬夜行人

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -133,3 +133,34 @@ categories:
 但是唯我论也是有它独到的作用，尤其是当它和目的论结合起来后。目的论是一种将万事万物的存在归结于某种原因的的世界观。试想一下，有一个既相信唯我论，又相信目的论的人，他会怎么看这个世界？首先作为精神世界的主宰，他肯定是至高无上的，而身边的一切又是为了什么而存在的，很容易推断出，是为了他而存在的。于是忽的一下，他就蜕变成了神，人间神。是不是一个很新奇的人生观？仔细想想，虽然荒谬，却又有神秘的美感~
 
 ## 寒冬夜行人
+书里这章主要说了荷兰哲学家斯宾诺莎，他是一个人格高尚的人，即使将这个维度放宽到西方2500年哲学史中。  
+他出生于西班牙犹太家庭，正当西班牙腓力二世，犹太教在西班牙遭到大力迫害，他父母找机会从西班牙逃往了荷兰，并加入了当地的犹太教团体。  
+荷兰是当时欧洲最为自由开放的国家，多教共存，但是它们之间并不和谐，基督教势大，对于犹太教团形成了很大的压力。荷兰当地的犹太教团为了不引起和基督教团的冲突，往往会严格约束教徒们的行为，避免和基督教有争端。  
+出现在这书里，说明斯宾诺莎多少和哲学沾点关系。不错，他是一位哲学家，继承了笛卡尔的哲学世界观框架，同样试图在一些原理和规则上建立起一统的哲学体系。  
+他提出的“原理”里，比较重要的是"实体": 这是一个绝对存在的，不能被怀疑的东西。因为它绝对存在，所以它不会依赖别的物体，自己就能证明自己。因为实体自己是自己的原因，那么外物也绝对不能摧毁实体。类似的，实体也是无限的、唯一的、不可分的、善的诸如此类。  
+这样的概念实际和上帝已经很类似了，但和上帝有存在这极大的差别: 上帝是无所不能的，那么上帝如果可以摧毁实体，这不就自相矛盾了么？  
+斯宾诺莎的想法很繁复，只简单描述一下我了解的: 实体不是上帝，实体是无限的，就是我们所在的世界，世上所有的人都是实体的一部分，因此才不能完美。这种观点也被称为“泛神论”。和中国古代的天人合一思想类似。  
+
+## 二虎相争
+
+## 特立独行
+
+## 旷世天才
+
+## 机械论
+
+## 决定论
+
+## 通往怀疑之路
+
+## 哲学怪兽
+
+## 还忘了一件事
+
+## 他！救世主
+
+## 康德的现实意义
+
+## 那个年轻人
+
+## 傲慢与偏见
