--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -142,8 +142,33 @@ categories:
 斯宾诺莎的想法很繁复，只简单描述一下我了解的: 实体不是上帝，实体是无限的，就是我们所在的世界，世上所有的人都是实体的一部分，因此才不能完美。这种观点也被称为“泛神论”。和中国古代的天人合一思想类似。  
 
 ## 二虎相争
+> 一个不尊重个人私有财产的民族，居然会看重主权，这只能用精神分裂来解释。  
+> 权力不能私有，财产不能公有，否则人类就进入灾难之门。  
+>    -- 约翰.洛克
+
+以笛卡尔为首，以演绎推断方式构建哲学理论的人，被称为理性主义者，这些人中有很多同样是著名的数学家。他们的工作遇到了以总结归纳为工具的科学家们（又称为经验主义）的质疑: 理性主义者的理论都是建立在公理上的，但这些公理自身确难以自圆其说。  
+理性主义者诚然可以跳出来说，那数学呢？当时的数学的代表是欧式几何，整个体系也如出一辙。而且欧式几何有巨大的影响力，从侧面也能给与理性主义者们以鼓励。当时科学家们，也不遑多让，在笛卡尔时代，科学已经有了巨大的发展，有很多关联的应用被投入使用。无数次实证面前，科学家们的质疑也很有说服力: 比如斯宾诺莎的实体，有人见过么，他能证明实体的存在么？  
+这里要说明一下当时科学和数学、哲学区别: 科学讲事实、归纳而数学讲质疑和推理。从现象中归纳，我们可以得到很多的新知识，但却无法保证正确性，需要做大量的实验去确保。数学是基于公理推断出来的，彼此相等，严丝合缝，因此只要公理是正确的，那么推断的结论就一定是正确的。  
+但是两者都是跛脚鸭，数学(哲学)基于怀疑、思考的目的之一是为了避免独断论，但是数学的基础公理就是独断，你说直线不完曲，那为什么呢？科学也是一样，他们基于大量的实证得出结论、知识，可是这些结论为什么就是对的呢？ 你说做了10亿次实验结果都没有变，那么第10亿零一次呢？  
+这绝不是抬杠，事实是未来也确实证明了当时的数学(哲学)和科学都存在描述的问题: 非欧几何、相对论。  
+这里要提一下经验主义的重要人物: 约翰.洛克，他是心理学家、政治家，他也同样是一位哲学家，是自由主义和社会契约的奠基者。🔽🔽🔽  
+[约翰.洛克 - 自由主义理论奠基者、社会契约论。][https://baike.baidu.com/item/%E7%BA%A6%E7%BF%B0%C2%B7%E6%B4%9B%E5%85%8B/24712]  
+他率先指出，基于数学去构建的哲学大厦存在的问题，并引起了大范围的争辩，而这场争辩又夹杂这政治、宗教因素，在随后，扩展成了国与国之间的大论战。  
 
 ## 特立独行
+> 吾爱我师，吾更爱真理。 -- 亚里士多德  
+> 世界上没有两篇相同的树叶。 -- 莱布尼茨  
+
+说其经验主义和理性主义区别的来源，可以溯源到哲学早期两位大拿: 亚里士多德和柏拉图。柏拉图是亚里士多德的师傅，但是两人对世界的看法确存在区别。柏拉图更注重心灵理性，亚里士多德更注重实际。以人为例，亚里士多德认为是先有了一个一个实际的人，我们才会意识到存在人这个概念。而柏拉图则认为: 人的个体来了又去，生生死死，而人这个概念则是恒久的。  
+回到上面说的国与国大战，那么参与者都有谁呢？🐶  
+答案是: 英国和欧洲其他国家？！英国因为地理因素，和大陆其他的国家被海洋隔开，因此在各方面都具有了更多的独立性。比如英国国王的宗教改革，远在罗马的教皇就对此束手无策。  
+独立的环境也孕育了不同的文化，早在经院哲学时代，英国就更加奉行以亚里士多德的思想，这与同时期的欧洲大陆刚好相反: 他们更加奉行柏拉图的理论。  
+这个时期刚好又是英国崛起的年代，哲学、政治、科学就这么交织在一起，打起了论战。  
+那么谁经验主义(英国)的对手们又有谁呢？  
+比较出名的有: 莱布尼茨，德国数学家。在国内因为他和牛顿都单独发明了微积分而著名。当然他是哲学家，代表理论有单子论、乐观主义。  
+他指出，如果一切按照经验主义者们的结论，那么人类和动物又有什么区别呢？动物也可以做到通过观察得到结论。但是人类不同，人类可以通过观察得出推断，然后通过思考形成知识。  
+莱布尼茨原作的批判更加详实、风趣。但是不打紧，这只能算是在有来有回，毕竟此时的理性主义和经验主义都存在巨大的隐忧。  
+这里提一嘴，莱布尼茨对中国极为感兴趣，他写过一篇著作[《论中国人的自然神学》](https://k.sina.com.cn/article_2642308694_9d7e6e5601901ut2y.html)，这本著作没有完稿，但是联想到他生活的时代: 17世纪，不禁感叹到，当时欧洲的知识的繁盛，和当时中国的封闭。  
 
 ## 旷世天才
 
