chore: 旷世奇才&机械论

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -171,8 +171,25 @@ categories:
 这里提一嘴，莱布尼茨对中国极为感兴趣，他写过一篇著作[《论中国人的自然神学》](https://k.sina.com.cn/article_2642308694_9d7e6e5601901ut2y.html)，这本著作没有完稿，但是联想到他生活的时代: 17世纪，不禁感叹到，当时欧洲的知识的繁盛，和当时中国的封闭。  
 
 ## 旷世天才
+十六世纪的英国，有一位重量级的选手: 牛顿。他在国内作为科学家而被众所周知，但是他的身份并不简单，他同时还是哲学家、神学家、数学家、天文学家等， 在哲学上，牛顿作为科学人士天然倾向于经验主义。  
+而牛顿是出名的小心眼，无论是国内还是国外，凡是曾强烈反对他的，后续他都会一一找回场子。在这场哲学争端中，他的好朋友洛克，在和莱布尼茨的文斗中，落了下风。牛顿为此也和莱布尼茨展开了论战，从而结了梁子。  
 
 ## 机械论
+牛顿作为哲学家，倒不是因为他写了自己的哲学著作，而是因为他在物理学上的发现，实在是太过震撼，以至于影响到了后续的哲学发展。  
+在说如何影响之前，先聊一下科学规则，有两条重要的标准: 1) 它是否可以准确的预测未来 2) 它是否足够简单。  
+以日心说和地心说为例，我们现在已经知道，无论地球还是太阳，都不是宇宙的中心。再者，以地球还是以太阳为核心，都是观察坐标系的基点，经过换算都可以得到相同的结果，那为什么还要将日心说拿出来说教呢？  
+因为它简练，在一定限制条件下，又可以预测未来。科学是一门实用主义，两条复杂度不同的结论但最终效果一致的原理中，我们选择简单的那条为准则。  
+回到牛顿力学，它的核心原则既简单又准确，在那时候的观测范围内，小到蚂蚁，大到天体，都遵循力学的基本规则。原本很多模糊不清，需要用神去解释的地方，突然就明朗起来了。  
+神的影响力大大减小了，同样的，心灵、灵魂之说，也遭到了削弱。按照牛顿力学的路，既然世间万物都要遵守力学规则，那么人类的身体是否遵守了，再进一步，人类的思想和感情是不是也是纯粹的物体按照物理规律运行的结果？  
+这种用物理规律去解释世界的哲学叫做机械主义，它出现的很早，在希腊时候就有人怎么假设，但当时的科学无法支撑。到了牛顿时期，情况变化了，力学的影响是如此的大，以至于机械论流行一时。  
+这期间，机械论的代表任务是: 霍布斯，英国人，经验主义哲学家。  
+霍布斯拿铃声来说明机械论: 在铃铛颤动直到我们听到声音这段时间里，铃铛只有运动没有铃声，空气只有运动没有铃声，传到我们的耳朵了就产生了铃声。所以真正存在的是运动，不是声音。  
+霍布斯也参与到同欧洲大陆的哲学辩论之中。那还是笛卡尔和斯宾诺莎的时代。  
+笛卡尔说“我思故我在”，霍布斯不理解笛卡尔的本意，就抬杠说，我还“我散步故我在”呢，那么我就是一散步。这把笛卡尔给气坏了。  
+霍布斯还发现了理性主义者的空谈问题，说斯宾诺莎的哲学结论没有什么意义，推理出来的不过是一堆定义罢了。  
+机械论确实很具有说服力，但是也有属于自己的阿喀琉斯之踵: 可以证明物质对意志存在重大影响，但是不能证明物质决定意志。  
+当一个人死去的时候，他的身体还在，所有的组织也没有发生变化，用机械论去看待，我们只能证明，他的身体动不了了，并不能证明在那动不了的身体里，意识是否消散。  
+同样的，机械论说，物质不依赖意志存在，那么当意识不存在的时候，又怎么能够知道物质的存在呢？  
 
 ## 决定论
 
