chore: 决定论&&通往怀疑之路

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -192,8 +192,26 @@ categories:
 同样的，机械论说，物质不依赖意志存在，那么当意识不存在的时候，又怎么能够知道物质的存在呢？  
 
 ## 决定论
+将机械论推演到极致，可以得到决定论: 世间一切都遵循物理规律，人类也不例外，人类的思想也概莫如是。  
+这带来了一个问题，如果思想也不过是无数复杂的物理规律堆叠起来的结果，那么意志还是不是自由的呢？试想一下，了解了所有的物理规则，又掌握了一切数据，经过大量的计算，我们就可以得到下一秒要发生的事情，同样的，我们可以类推，最终得出在时间的起源，我们的命运就已经被计算好了，这一荒谬、恐怖的结论。  
+事实上，哲学世界中，凡是试图想找出世界万物皆遵守规则的哲学体系，都难以避免走向决定论，从而不得不艰难的为自由意志寻找解说。古希腊的因果律，万事万物皆遵守，人类的自由也不过是因果划定好的，无论如何抗争，结果都会如约而至。同样的，如笛卡尔、斯宾洛莎的哲学体系，如果万事万物都遵循严格的规则，那最终也会引出人类的自由到底是什么的问题。  
+不过，决定论也有作为哲学思想实用的一方面，在面临巨大的苦难时，我们完全可以从决定论去解释，这是注定的，从开始就已经决定好了，没有办法改变的。  
+这样一想，是不是多少坦然了些呢？  
 
 ## 通往怀疑之路
+理性主义和经验主义者相互辩驳，为此衍生出种种理论，却越发的偏离现实世界，且矛盾重重。  
+这时一位叫做休谟的英国少年，给哲学带来亮光: 休谟说，打住，你们的讨论都不对，为什么呢？因为这些讨论已经超出了人的经验感知范围以外了，我们无法知道对错，所以怎么讨论也没有结果。更重要的是休谟将怀疑的精神发扬光大。笛卡尔说我思故我在，休谟偏偏连自我的存在也怀疑，他对自我是否存在的回答也干脆: 不知道就是不知道。  
+既然这些超出认知、无法判断对错的概念，休谟统统以不知道为回答，那么他的贡献是什么呢？答案是，他提出了究竟什么知识才是可信的，为此他树立了两条标准:  
+1) 不依赖于经验，自身完全符合逻辑，且不互相矛盾的知识，如几何学，当然理性主义者那些空中楼阁一样的理论是不在其中的。  
+   几何学描述的物体，在现实世界是不存在的，但是我们却能认知，而且规则不互相矛盾。  
+2) 基于经验，我们能够感受到的、摸到的、听到的、等等(不管这种感觉是不是幻觉)  
+立完标准，休谟就开始开炮了。他的目标是因果论。  
+这可是非常可怕的事情: 科学能预测未来是基于一个前提，特殊的条件发生后，结果是类似的。这里包含着归纳推理总结出的经验，可问题偏偏出在这里。归纳法和因果论是一体两面。  
+因果论可以严格表述为: 有两件事: A/B，总是能观察到A发生在前面，B发生在后面，AB总是伴随发生。  
+用休谟的可靠知识分类，因果律是否可以属于第一类呢？不能，因果律本身就是相当独断的，如果只是基于逻辑推理，不依赖经验，是无法得出因果律的。那么第二类呢？答案还是不能，我们虽然可以观察到原因和结果的相继发生，伴随发生，但是我们无法观察到原因和结果互相之间的必定关系(比如结果那么一定有原因)。用罗素的话是: 一只在农场的鸡，观察到农场主每次来都会带吃的，因此它以为农场主来是因，有吃的是结果。但是有一天农场主带来了一把枪，把鸡杀了。鸡穷尽一生观察的经验，也无法保证这个必然关系。  
+而科学的大厦，正是建立在因果律上，比如牛顿的万有引力，他认为苹果是有什么原因才掉下来的，这就是因果律。而因果律得出的知识并不可靠，还是那句话: 你怎么保证下一次就会符合你的科学理论？  
+休谟似乎带了光芒，可这却让人更加的发狂了: 科学家们对此不置可否，毕竟在现实世界，科学已经取得了伟大的成就。哲学家虽然觉得说的有理，可是，这也将哲学陷入了尴尬的境地:  
+理性主义有独断论的危险，啊对。一切都得从经验出发，啊对。因果律和归纳法是循环论证，啊，也对。所以因果律不能用经验证明，所以没有因果律，自然也没有归纳法，那么哲学还剩下什么呢？    
 
 ## 哲学怪兽
 
