chore: 哲学怪兽 && 还忘了一件事

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -199,6 +199,8 @@ categories:
 这样一想，是不是多少坦然了些呢？  
 
 ## 通往怀疑之路
+> 逻辑上，我们永远也无法证明「太阳未来会从东方升起」-- 大卫.休谟
+
 理性主义和经验主义者相互辩驳，为此衍生出种种理论，却越发的偏离现实世界，且矛盾重重。  
 这时一位叫做休谟的英国少年，给哲学带来亮光: 休谟说，打住，你们的讨论都不对，为什么呢？因为这些讨论已经超出了人的经验感知范围以外了，我们无法知道对错，所以怎么讨论也没有结果。更重要的是休谟将怀疑的精神发扬光大。笛卡尔说我思故我在，休谟偏偏连自我的存在也怀疑，他对自我是否存在的回答也干脆: 不知道就是不知道。  
 既然这些超出认知、无法判断对错的概念，休谟统统以不知道为回答，那么他的贡献是什么呢？答案是，他提出了究竟什么知识才是可信的，为此他树立了两条标准:  
@@ -214,8 +216,16 @@ categories:
 理性主义有独断论的危险，啊对。一切都得从经验出发，啊对。因果律和归纳法是循环论证，啊，也对。所以因果律不能用经验证明，所以没有因果律，自然也没有归纳法，那么哲学还剩下什么呢？    
 
 ## 哲学怪兽
+在迎来新的哲学大佬前，得说明下，在休谟的怀疑论下，不仅仅哲学不剩下什么，连科学也成了立足于沙土的大厦。怀疑论自身符合逻辑，却结果荒谬:  
+理性主义者们的公理逻辑不能自洽、经验主义者则和科学家一样，使用以因果律为驱动的归纳法，徒劳的建立知识大厦，可是如果基础就是错误的，又怎么能得到正确的结果呢？  
+西方哲学从笛卡尔开始发展了数百年，到休谟的时代，建立起的不是宏伟大厦，而是什么也不剩？而且这数百年内，哲学家们似乎和形而上学卯上了，一直在使劲吃奶的力气去研究。这是和当时的时代背景相关，当时宗教占据着绝大多数人的精神生活，即便是哲学家、科学家也很难免俗。有宗教这个boss在，人们对于生命的意义、人生的幸福是很容易在宗教内找到解释的，而哲学家们也乐于用自己的哲学观去解释上帝(这在教宗看来是异端)。同时科学的兴起，使当时的哲学家们将目光放在了如何为科学建立基础、开路上。  
+这章还提到了一个有意思的思辨: 科学的世界，无论是完全的否定因果律，还是完全的支持因果律，都会得出荒谬的结论，前者是我们上面说的怀疑论，后者大致是这样的:  
+一个完全由因果律决定的世界，是不存在自由的，因此你是无法推测出因果律的: 你无论做什么，都是由一个因决定的(只是你可能没有意识到这个因)。在这个世界，你也许可以不停的做实验，但是你永远不能知道真正的原因是什么。自然也得不出什么因果律(因为不知道原因)。
+科学可真悲催，但是世界也真荒谬！)   
 
 ## 还忘了一件事
+书里提到了之前一直在说的欧洲教会，在哲学兴起到19世纪(1835后欧洲的宗教审判所基本消失)之间的这段时间，教会随着印刷术的发明，控制力越来越弱，大量学者通过跑到宗教宽容国家出书的方式，来规避教会的审判或者是政治势力的迫害。不过神奇的是，哲学家里有很大一批是教徒，他们写哲学著作也不全是热爱哲学，而是希望通过哲学工具去晚上神学理论，最出名的如日心说和万有引力，都在论述中为上帝保留了位置，或者压根说这就是上帝他老人家指示的。  
+回到正题，怀疑论带来的阴影是怎么被破除的呢？  
 
 ## 他！救世主
 
