--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -228,6 +228,30 @@ categories:
 回到正题，怀疑论带来的阴影是怎么被破除的呢？  
 
 ## 他！救世主
+> 人类的理性为自然世界立法 -- 康德
+
+一位叫做康德的德国宅男，给这个问题带了独特的解。  
+深受休谟影响的他，突然想到和地心说一样，迄今为止的哲学理论都是以人的心灵为中心视角去看待世界，有没有可能这是错误的呢？  
+基于此，他做了深刻的思考，在50多岁的时候，终于将自己所思所想汇集成了《纯粹理性批判》这本巨作。  
+在书中，人类只是世界中的一个微小存在，一个通过感知去认识外部世界的存在。人类的感受是被加工过的，通过认知机关的加工(康德管这个叫做: 先天认识形式)，最终生成了我们的理性和感知。就和带上有色眼镜一样，加工过的世界带有无数被加工的痕迹。因此，人类认知的世界和真实的世界是不相同的。而人类的认知机关确是彼此相同的，这样不同个体感受到的世界又是按照同样规则进行的。  
+人类的认知机关有很多工具用来加工真实世界，康德称之为先天范畴，一共有12种，比如因果律。真实世界被加工后生成了表象世界，并在加工过程中具有了因果律的特性。因此，人们感受的表象世界是符合因果律的。同时，康德又指出，人的自由意志和真实世界本身一样，是高于人类认知的，康德管它们叫做物自体(自在体)。因为是高于人类认知的，所以认知机关加工使用到的因果律的，并不能控制人的自由意志，因此人类是自由的。  
+咋一听康德的说法，会让人云里雾里: 这和理性主义者基于公论建立起来的复杂的哲学大厦有什么区别呢？而且又是物自体，又是先天范畴、先天认识形式，这不也是一厢情愿么？  
+康德给出了自己的证明，并且相当具有说服力: 人的大脑肯定不是一片空白就能接受知识，否则一张白纸、一块石头为什么不能接受知识呢？那么人类接受知识就肯定需要有一些先于经验的感知，康德将这些划到了认知机关(先天认识形式)里，比如空间、时间。以此两者为例，说明下康德的证明:   
+空间，人类出身就拥有感觉，而感觉暗指的是，我们可以感受到我们之外的东西，这个之外就是空间，如果没有办法区别感觉，那么人类就不能将自己和周围的世界区分开，自我意识也就无从提起。从反面来说，人类可以想象没有不存在物体的空间的样子，却无法想象没有空间的物体的样子。  
+时间和空间类似，时间可看做是一片片前后连起来的空间，我们能意识到自己的存在，正是因为我们意识到这一片片时间中各不相同的“我”其实是同一个体，而不是千千万万散乱不联系的个体。  
+这里也转一下希尔贝克的《西方哲学史——从古希腊到二十世纪》证明的例子:   
+> 假设出了一个交通事故，有一个警察去调查，调查回来说：这个事故不是在任何时间发生的，也不是在任何地点发生的，也没有任何发生的理由。
+那么警察局长一听肯定气疯了。哪怕这警察胡编一个时间、地点和理由，警察局长也不会那么生气。为什么呢？假如警察胡编了时间地点和理由，好歹我们有机会知道他说的是真话还是假话。但他这个没有时间、地点和理由的报告呢，对我们来说是完全不能理解的。我们根本就不接受这么一个答案，根本就没法理解这么一个答案。这说明了，一旦一个知识不具备时间、空间和因果律的要素，我们就完全不能理解。  
+
+而为了证明物自体的存在，康德又设计了4组二律背反命题。康德讨论这些问题的目的是，这些问题无论对错，都是成立的，理性研究这些问题，最终只能自相矛盾。借此，可以证明，存在人类理性无法认知的事物，也就是物自体。   
+康德属于唯心主义，这指的是，认为人类的心灵会对客观世界进行加工。  
+收回来，康德的理论确实很好的解释了世界的种种矛盾之处的原因，并一一证明。但在这个理论下的人类却特别的像电脑！！！  
+比如:  
+**人类的认知机关=电脑操作系统**  
+**所有人类的认知机关都相同=电脑的操作系统都差不多**   
+**人类都只能理解加工过感受=电脑只能理解加工后的代码**  
+**人类不能理解物自体=电脑无法理解代码背后的含义**  
+这么一想是不是思细级恐？  
 
 ## 康德的现实意义
 
