--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -254,7 +254,28 @@ categories:
 这么一想是不是思细级恐？  
 
 ## 康德的现实意义
+> 有两种东西，我对它们的思考越是深沉和持久，它们在我心灵中唤起的惊奇和敬畏就会日新月异，不断增长，这就是我头上的星空和心中的道德律。 -- 康德
+
+康德的理论对于我们的现实生活也具有很大的意义: 在这套理论框架下，我们可以在表象的世界以逻辑为尊，而同时意识到还有无法认知的也不遵从理性的世界。我们只需要去在能感知的世界里生活，并不需要去试图证明、理解不可以认知的世界: 比如上帝、世界是不是真实的，这些人类理性无法认知的事情。  
+书中举了一个多维世界的例子来说明这种不可认知: 当一个三维物体进入二维世界，生在在二维世界的居民只能看到三维物体和平面的切面，这个切面随着三维物体的移动不断变化，居民可以意识到这是三维物体，但是确永远不能感知这个三维物体到底是啥样，因为他的世界根本就没有三维物体。同样的，一个四维物体(非指加上时间维度)来到三维空间，我们也同样只能知道它的存在，却无法直观去感觉他的面目(网上有很多这样的视频，在B站搜索 四维物体，就有很多科普视频)。  
+当然，康德的理论自身也有不少问题，比如他说“存在”也是先天范畴的一个，但是在他的理论中，存在物自体，这就是先天范畴管到了物自体头上，开始矛盾了。伟大的理论在一开始都会有些小瑕疵，后来人会给他弥补上。    
+不过在弥补的工作进行中时，踹门的人就出现了。  
 
 ## 那个年轻人
+我国非常推崇唯物主义辩证法，这里面的辩证法来自于德国哲学家，黑格尔。  
+他在阅读康德的著作时，也发下了我们提及的问题，但却没有试图去做修补的工作，他想的更加深刻，为什么物自体这个概念有漏洞，而康德还要用它呢？  
+这是因为康德希望将人类的理性认知能力限制在一定的范围内，去解决休谟和决定论带来的困境。  
+这为黑格尔点亮了道路，哲学的瓶颈出现在人们的认知能力上，那么会不会是一直以来的哲学研究者们的方向不对？黑格尔发现了这个问题！  
+他认为，之前的科学家在研究形而上学的时候，都将真理和世界当做一个独立于自我之外，固定不变的东西去研究，总觉得我们需要去寻找世界真理的存在。  
+这个头，从笛卡尔的二元论就开始了， 笛卡尔说我思故我在，将我和世界分为了两个存在。这是错误的，我是世界的一部分，我也在影响着世界，这才是正常感知中的世界。  
+黑格尔说，真理并不是固定不动的，真理是世界变化不止的过程，世界越变化，我们就越靠近真理。  
+同时他也指出，世界的变化时有方向的，世界朝着理性的的方向演进，新的替换旧的总要符合一定的规则。简单说就是，只要存在理论，就有反对他的理论，它们互相冲突，最终生成新的理论，然后继续之前的步骤。这不断进行的步骤会产生出越来越完善的理论。  
+这也是我们常说的辩证法，黑格尔认为辩证法是存在于世界上的万事万物的: 比如因爱生恨、比如政权更迭。  
+而在一切的背后有个叫做“绝对精神”的力量在控制这走向，所以黑格尔也是唯心主义，而这个精神就是世界的本质。  
+在这套理论下，人类也只不过是世界自我发现、自我演进的一个工具，也许高级点，在历史的进程下，我们有自己的自由，但是却不能影响演进的方向。  
+有意思的是，黑格尔自夸到，自己就是被绝对精神选中，向人们揭露世界本质的人。  
+总结一下，黑格尔的理论框架有这么几个特点:  
+1、 用全新的角度去看待矛盾，在此之前，人们将事物视作不能自我矛盾的，但是黑格尔认为万事万物内部都是有矛盾的，万事万物都是从矛盾中演进出来的，矛盾也是不断发展的动力。  
+2、 认为真理不是固定的，是不断变化的。黑格尔强调，真理是整个世界变化的过程。所以研究事物就要研究事物的历史，比如人类史、哲学史，都是为了从动态的角度去探究。  
 
 ## 傲慢与偏见
