chore: 傲慢与偏见 & 悲观主义

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -229,6 +229,7 @@ categories:
 
 ## 他！救世主
 > 人类的理性为自然世界立法 -- 康德
+> 《大不列颠百科全书》对idealism(唯心主义)的定义：In philosophy, idealism is the diverse group of metaphysical philosophies which asserts that "reality" is in some way indistinguishable or inseparable from human understanding and/or perception; that it is in some sense mentally constituted, or otherwise closely connected to ideas.翻译“在哲学中，唯心主义是一组不同的形而上学哲学，它断言“现实”在某种程度上与人类的理解或知觉不可区分，或不可分割；它在某种意义上是由精神构成的，或者与思想紧密相连”    
 
 一位叫做康德的德国宅男，给这个问题带了独特的解。  
 深受休谟影响的他，突然想到和地心说一样，迄今为止的哲学理论都是以人的心灵为中心视角去看待世界，有没有可能这是错误的呢？  
@@ -279,3 +280,56 @@ categories:
 2、 认为真理不是固定的，是不断变化的。黑格尔强调，真理是整个世界变化的过程。所以研究事物就要研究事物的历史，比如人类史、哲学史，都是为了从动态的角度去探究。  
 
 ## 傲慢与偏见
+> 谁要是走了一整天，傍晚走到了，那也该满足了。 -- 彼得拉克  
+
+叔本华出生在富豪家庭，父亲早亡，母亲移情别具，他也因此与母亲有矛盾，早早离开了家庭。  
+他在哲学上崇尚康德，而厌恶黑格尔。在他一生中做的最多的事情就是变着法子和黑格尔较劲，当然这绝大多数时候都是他自己在生闷气。黑格尔的学说影响力是如此之大，以至于在他生前就成为了德国的官方学说，崇拜者更是不计其数，相较而言，叔本华只是一个吃遗产的富少，不可同日而语。  
+但叔本华确实一个自视极高的人，他在20岁的时候就出版了第一本著作: 《充足理由律的四重根》，不过当时基本没有人看。这愈发刺激了他对名誉的渴望，他说“一个天才是很难合群的，因为除了他的独白之外还有什么对话能如此智慧而有趣呢？” ，也是为自己的开脱，后续他又出了一些著作，但基本都无影响力，其中还有他的名作: 《作为意志和表象的世界》。直到63岁，他出了一本《附录与补遗》以补充自己的哲学体系，却意外大获成功。   
+无论他波折的人生经历过多少，由他哲学思想衍生出来的推论却留下了浓墨重彩的一笔: 悲观主义。  
+
+## 悲观主义
+叔本华的理论是基于康德的改进，在物自体概念上做了改动: 他认为物自体是可以了解的，而且全宇宙的物自体都是同一个，叫做生命意志。  
+生命意志表现为求生意志，还有各种欲望。  
+而基于此，他的哲学核心思想是: 对于所有的生物和物质， 求生意志是最重要的、最本质的、是决定一切的。但生命意志是邪恶的，是痛苦之源，人们越顺从于生命意志的欲望，就会越痛苦，除了运用理性去抵抗生命意志无边的欲望，才能减轻痛苦。  
+那么该如何运用理性去抵抗呢？ 去获得更大的世俗成功？还是不断学习？亦或是直接放弃生命自身，向生命意志开战？  
+叔本华说，都不行，世俗的成功、学习都无法抵抗痛苦，甚至本身就是顺从生命意志欲望的表现。而自杀也无意义，生命意志是全世界合一的，个体的消失并不会影响到它的存在，反而是个体的屈服，是对斗争失去信心的表现。唯有道德，才能克制欲望，减免我们的痛苦。  
+对道德的追求中，隐隐透出了宗教的影子。  
+这一章还说了部分叔本华的一些哲学论证，不过我并不能理解为何叔本华能获得如此高的名声？异或是迎合了大众对于哲学的审美观，小册子感悟式的易读易懂？略过不言。   
+
+## 评价叔本华
+
+## 阴影中的危险 
+
+## 瞧！这个人
+
+## 查拉图斯特拉如是说
+
+## 被侮辱的和被损害的
+
+## 科学君，拯救世界的任务就交给你了
+
+## 伟大的进化论
+
+## 进化论的影响
+
+## 辩证唯物主义
+
+## 生活在别处
+
+## 逻辑实证主义
+
+## 实用主义
+
+## 科学说: 我不信先验理性
+
+## 科学说: 人的认知能力有局限
+
+## 科学说: 我自己也不靠谱！
+
+## 非理性
+
+## 主观真理
+
+## 中国哲学
+
+## 暂时的结论
