chore: 评价叔本华&阴影中的危险&瞧！这个人

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -297,10 +297,22 @@ categories:
 这一章还说了部分叔本华的一些哲学论证，不过我并不能理解为何叔本华能获得如此高的名声？异或是迎合了大众对于哲学的审美观，小册子感悟式的易读易懂？略过不言。   
 
 ## 评价叔本华
+叔本华的悲观主义可说的不多，其思想一部分源于康德的形而上论，一部分则源于印度佛教。  
+悲观主义，对我们忍受痛苦，则有些微的作用。主要说两点:   
+1、 当我们面临失意、不幸的时候，我们可以说，世界就是充满痛苦的，不必因此而觉得不公、难受，这是世界的本质。  
+2、 同样的，看到别人我们也要意识到，无论他们表现的如何，也是和我们一样的痛苦。  
+另外，叔本华将生命意志的欲望描述成无穷无尽的，理性无法克制的（理性只能减弱），但是我们知道，人类的欲望是推动我们进步的动力，虽然难以满足，但绝非无法理性克制的。  
 
 ## 阴影中的危险 
+文艺复兴时期，人们对理性是无比的推崇，甚至将其作为人类和其他生物的关键区别。  
+但到叔本华的理论，生命意志是如此强势，理性也不过是生命意志推动自己发展的工具而已，这其实就是在攻击理性自身了。  
+理性是什么？我们可以将理性视作是讲道、讲逻辑、客观的去看待世界。失去理性我们会怎样？举个例子，喝醉的我们，极大削弱控制力，失去了理性。会做出很多平时敢想不敢做的事，闯下各式各样的祸。  
+所以，我们是通过理性控制自身，去认识客观世界的。悲观主义对理性的打击，其实自攻乌龙的情况。  
 
 ## 瞧！这个人
+可能是气质忧郁，叔本华的哲学思想吸引了无数人，其中有位叫做尼采的德国人，成为了他学说的继承者。  
+前面说过叔本华与其说是作为伟大的哲学思想而出名，倒不如说更像是畅销书作家式的出名。尼采就更进一步了，他生平著作不多，不曾构建自己哲学体系，写作也偏向散文。  
+中年身患梅毒，45岁疯了后又被妹妹利用，将其打造成一个哲人形象，改造其未出版文稿思想，用于迎合纳粹的种族主义，令人唏嘘不已。  
 
 ## 查拉图斯特拉如是说
 
