chore: 查拉图斯特拉如是说

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -315,6 +315,10 @@ categories:
 中年身患梅毒，45岁疯了后又被妹妹利用，将其打造成一个哲人形象，改造其未出版文稿思想，用于迎合纳粹的种族主义，令人唏嘘不已。  
 
 ## 查拉图斯特拉如是说
+前面说到的尼采，是一位卓有名气的哲学家，虽然在形而上学理论上建设不高，但因为其名气和影响力。有必要在这里给大家简单介绍一下他的思想。  
+叔本华将世界的本质比喻为生命意志。在尼采这，它换了个名字: 权利意志，也换了个“性格”，尼采认为，权利意志在不同的人身上表现不一，在弱者身上表现为谦虚、平和、同情。在强者身上则体现为进取、勇于斗争、追求创新、追求与众不同。前者又被他称为奴隶道德，后者则是贵族道德。  
+尼采并不排斥弱者道德，但是反对将弱者道德扩大到一切方面。认为强者就应该用强者的道德，而不是弱者道德。书中推断，这可能是因为法国大革命中民主派上台后实行了大量可怖的血腥政策，让当时的思想家们对于民众的暴力持有深深的恐惧，从而倒向了精英政治，一如他们的前辈柏拉图在看到公民理事会处决了苏格拉底后。  
+在世界观上，尼采则认为世界的本质是动态变化的，不是一成不变的，而人们总结出来的真理都是固定的，因此这些理论都充满了谬误。那为什么还要追求真理呢？因为离开了真理人类就无法存活(虽然离谱，但是他就是这么认为)，所以真理又可以看做是一种离开它就无法存活的错误。他也同样认为世界本质是痛苦的，但他对付痛苦的方式和叔本华截然相反，他强调要用迎痛苦而上，积极反抗。  
 
 ## 被侮辱的和被损害的
 
