--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -321,8 +321,18 @@ categories:
 在世界观上，尼采则认为世界的本质是动态变化的，不是一成不变的，而人们总结出来的真理都是固定的，因此这些理论都充满了谬误。那为什么还要追求真理呢？因为离开了真理人类就无法存活(虽然离谱，但是他就是这么认为)，所以真理又可以看做是一种离开它就无法存活的错误。他也同样认为世界本质是痛苦的，但他对付痛苦的方式和叔本华截然相反，他强调要用迎痛苦而上，积极反抗。  
 
 ## 被侮辱的和被损害的
+尼采、叔本华和书中这章提到克尔凯郭尔，都被作者归纳为哲学史上过渡性哲学家: 在他们前面的是，形而上学的最后高峰 - 黑格尔，在哲学迈步向新的方向前，他们延续了发展，但是更多的是非理性的结论:   
+无论是权利意志还是生命意志，自身都缺乏严谨的逻辑推断，理论也不成框架。而克尔凯郭尔是一位虔诚的基督教徒，但是家世较为悲凉，亲人在他年轻的时候相继离世，他和父亲相依为命，并坚信这是上帝的惩罚，为此惶恐。  
+缺乏个人幸福，让他的哲学更加看重如何解决个人幸福问题，他对着眼于解决一切存在原因的形而上学，充满鄙视。认为每个人都是不相同的，普遍的规则怎么能适应不同的个体呢？主动抛弃普遍真理，拥抱了主观真理，或者又叫信仰。  
+哲学发展到近现代，由关心世界背后的本质，走向关心个人的幸福、人生的意义。从崇尚理性，到回归感性(信仰)。确实让人觉得有些错乱。  
+不过，理性在人世间的终极代表科学在自然领域取得了难以置信的成功，最终又将崇尚理性反哺到了哲学。  
 
 ## 科学君，拯救世界的任务就交给你了
+近代以来，科学取得的进步是全方位的，从最开始的物理、到后面达尔文提出进化论，用科学的方式去解释生物的演变开启的生物学，然后到巴甫洛夫通过外界环境去刺激狗，研究狗的行为动作开启的心理学。  
+科学扩展的范围越大，就越证明理性和推断的作用，也许哲学家困塞于形而上学的道路是一时的，转而取诸于信仰是错误的？  
+科学如此强大，令曾经望而生畏的宗教神明无处遁形，宗教理论任然可以解释很多科学未知的现象，却越来越没有说服力去证明自身的可靠。  
+同时，科学取得成就也令人乐观，让机械论、决定论开始重新抬头。  
+不过这些都是后话，让我们先从进化论开始，了解科学是怎么去影响哲学的吧。  
 
 ## 伟大的进化论
 
