--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -335,6 +335,48 @@ categories:
 不过这些都是后话，让我们先从进化论开始，了解科学是怎么去影响哲学的吧。  
 
 ## 伟大的进化论
+> 我们为何成为这样”不等于“我们应该怎样 -- 林欣浩
+
+
+在进化论之前，科学无法很好的解释世间的各种各样的生物是怎么产生的，这仿佛一个巨大的架空世界降临在物理学的规则之上运行。  
+直到进化论(以及后续不断的理论更新)的提出，才很好的解释了生物的出现和天性的种种。  
+现在版的进化论有这么几个关键点:   
+1、 生物通过基因进行遗传  
+2、 基因在遗传过程中会出现不可控的，无序的异变  
+3、 生物都会大量繁衍后代，远超环境能承受的，所以会有大量的个体被迅速淘汰  
+4、 生物的遗传基因无法通过后天行为被修改  
+还有几个针对进化论常见的误解问题:  
+1、 进化论说的是生物从低级进化到高级么？  
+不是，基因在遗传过程中的改变是无序的，而带有不同改变的生物在出生后，经历残酷的自然选择，留下更加适应的个体，从而繁衍壮大。这只和是否适应有关，和高级低级无关，正如现在世界上既存在人类，也存在细菌，从结构上人类更复杂，但这并不意味这简单的细菌就该消失。  
+2、 生物后天努力可以修改基因吗？ 
+不可。 认为用进废退的，后天可以改变先天的这种看法，又叫做拉马克主义。  
+举个简单的例子来反驳，将一对老鼠减去尾巴，然后繁衍，后续的老鼠同样操作，一连几十辈，最终生出的老鼠依然有尾巴。  
+3、 生物的进化是有意志的么？  
+没有，个体的进化是无序的，生物的进化并不是后天意志决定的。也许从很长的时间维度去看，基因似乎有加强自己竞争力的意志，但是这实际并不存在。  
+4、 为什么生物不能进化出机关枪，却能进化出眼镜
+机关枪是由很多零件组成的，生物单独演化出其中一个零件明显不能对于其适应环境能力有多少提升，因此在自然选择上也不回对其他的突变构成更多的优势，自然就几乎不可能在这条道路上进化出机关枪。而眼镜则于此相反，虽然是构成复杂的器官，但是确由一部分一部分叠加构成，比如感光部分，拥有的个体会比不具备的个体拥有更强的对周围感知能力，从而提高生存能力，所以向眼睛方向的突变可以保留下来，并不断演进。   
+5、 雄孔雀的尾巴是累赘么？  
+生物进化不但通过生存压力进行选择，也通过生殖压力进行选择。这也很好理解，活下来不代表可以将自己的基因传递下去。 想要将基因传递下去，还要去吸引异性。 雄孔雀繁丽的尾巴，是我们现在看到的结果，但在最开始，这代表着雄性具有很强的实力(生存能力、竞争能力等)，最开始的雌孔雀同样拥有很多种倾向，比如喜欢不华丽的。但是选择不华丽的孔雀们，在后续生存压力下，逐渐被淘汰。最后形成了我们看到的，雄孔雀竞相长出华丽的尾巴去吸引雌孔雀的交配权利。  
+6、 进化论是否经过验证？  
+已经经过了很多验证。  
+进化论属于科学的论证，前面说过科学有两个核心前提:  
+1) 要可以准确预测未来  
+2) 要尽量的简单，能论证出同样结果的两个理论，以简单的为佳。  
+
+进化论首先是经过很多验证的，无论是近代的基因科学，还是地层中不断发现的各年代化石，都是进化论有力的佐证。  
+其次，进化论很简洁，也很聪明，核心就最开始提到的四。， 
+7、 进化论是否可以推广到社会学领域么？  
+不可以，进化论出现后，有很多尝试将其应用到其他方面的努力，就如将力学应用解释世间万物，最后得出机械论一样，其中有个鼎鼎大名的衍生物: 社会达尔文主义，就是个可怕的恶果。  
+进化论指出生物的演化是在生存的压力下，进行选择的，社会达尔文的支持者们认为，社会也应该像自然一样优势劣汰，将不适应的个体淘汰掉，从而达到族群基因进化的目标。说到这，就不得不想到，用极端残酷的手段消灭了600万犹太人的纳粹，不错他们就是社会达尔文主义的忠实信徒。  
+他们还将屠刀挥向了残疾、年老、同性恋、精神疾病的同胞们。  
+这是一种极致的集体主义，为了集体的未来，去消灭弱势、不符合集体利益的个体。  
+不过，如果单从进化论来说，我们还可以推出其他结论，别忘记，它至少有四个基本原则: 其中，生命通过基因进行遗传，同时会有大量不适应的个体被淘汰，因此对于生命来说，生存和生殖，都是极重要的。  
+这两个目的，显然都是极度个体化的，换言之: 自私的。那如果按照这种说法，我们应该完全从利我的角度出发，什么集体利益，什么社会责任，统统不理，活着和生娃大于天？？？显然，稍有生活经验的人，都明显知道，这样是要坏事的。  
+回过头，从进化论为标杆，可以推出截然相反的两条路，我们应该吸取什么教训？  
+答: 进化论是通过对自然现象的总结归纳得出的科学理论，属于情况是什么样的、为什么会变成这样，但是并不代表我们就应该这样。  
+人类发展的历程一直都是对自然的征服，正如我们开山辟路、种植作物，养殖家畜一样。诚然，现在我们是基因同自然环境一路斗争演化而来。但是这绝不代表我们还要在意识层面继续这样的斗争去筛选基因，我们应该向追求的世界进发！  
+
+这一章主要说明了进化论和一些普遍存在的误解，重要的是，指出了进化论作为解释生物学现象的可靠理论，却不能应用到其他领域的原因。  
 
 ## 进化论的影响
 
