chore: 进化论的影响

--- a/source/_posts/【读书笔记】哲学家们都干了些什么？.md
+++ b/source/_posts/【读书笔记】哲学家们都干了些什么？.md
@@ -379,8 +379,19 @@ categories:
 这一章主要说明了进化论和一些普遍存在的误解，重要的是，指出了进化论作为解释生物学现象的可靠理论，却不能应用到其他领域的原因。  
 
 ## 进化论的影响
+进化论有远超之前其他科学理论的影响，即便牛顿力学也不能与之相比，力学虽然揭示了物理规则，但是仍然给宗教留下了很大空间，至少基督教的教义中并没有直接涉及到力学的内容。  
+但是进化论的主角不同，是生物和人类，这在基督教教义中是花了大篇幅说明的，创世说、亚当和夏娃，都广为人知。进化论来了个一网打尽，导致基督教一度陷入极为尴尬的境地。虽然现今，宗教的解释已经也采用了进化论来增强信服度: 生物是按照进化论的规则进行演化的，但是上帝在某个时刻将灵魂注入了人猿的身体中，诞生了人类。  
+这也从侧面印证了进化论的影响力。书中将这巨大的影响力总结为三个方面:  
+1、 严重的打击了基督教的威信   
+2、 消除了人类的神圣性  
+3、 从生物的本能方面去解释了一些过去被认为带有神圣、神秘的人类属性: 如艺术。  
 
 ## 辩证唯物主义
+> 『辩证唯物主义』的教条有:  
+> 1.物质是第一性的，意识是物质发展到高级阶段的产物。
+> 2.世界万物是普遍联系的，不断地运动的，充满矛盾的。
+> 3.世界万物运动的动力是无处不在的矛盾和矛盾的解决。
+> 4.世界万物运动的规律是辩证的，即对立统一、质量互变、否定之否定(辩证法三规律)。
 
 ## 生活在别处
 
