chore: 【读书笔记】美股、美债、美元和商品 加图、加介绍

--- a/source/_posts/【读书笔记】美股、美债、美元和商品.md
+++ b/source/_posts/【读书笔记】美股、美债、美元和商品.md
@@ -1,18 +1,16 @@
 ---
 title: 【读书笔记】美股、美债、美元和商品.md
 date:
-excerpt: ''
+excerpt: '美股、美债、美元、商品这四者之间是怎么样的相互影响关系？'
+photos: '../images/美债2.jpeg'
 tags:
 - 经济
 categories:
 - 读书笔记
----
-
-美股、美债、美元、商品这四者之间是怎么样的相互影响关系？  
+---  
 
 <!--more-->
 内容收录自: [美股、美债、美元、商品这四者之间是怎么样的相互影响关系？](https://www.zhihu.com/question/26163000)  
-![美债](../images/美债2.jpeg)  
 
 美债收益率是大类资产研究的起点。  
 机构投资者做资产配置时，一个很重要的考虑因素就是[资产收益率](https://baike.baidu.com/item/%E8%B5%84%E4%BA%A7%E6%94%B6%E7%9B%8A%E7%8E%87?fromModule=lemma_search-box)与[负债匹配](https://wiki.mbalib.com/wiki/%E8%B5%84%E4%BA%A7%E8%B4%9F%E5%80%BA%E7%AE%A1%E7%90%86)。
