--- a/source/_posts/【杂谈】反思之一.md
+++ b/source/_posts/【杂谈】反思之一.md
@@ -1,12 +1,12 @@
 ---
-title: 工作反思-2022年11月09日
+title: 【杂谈】反思之一
 date: 2022-11-09 20:36:14
 excerpt: 工作中遇到两件值得内省的事，特记录。人的性格固然难以改变，仅以"怕什么真理无穷，进一寸有一寸的欢喜"自勉。
 photos: '../images/fs-1.jpg'
 tags:
 - 反思
 categories:
-- 工作
+- 杂谈
 ---
 
 下文仅描述事件，不涉及具体的人。  
