chore: 添加fs-2.png图片

--- a/source/_posts/【杂谈】反思之二.md
+++ b/source/_posts/【杂谈】反思之二.md
@@ -2,7 +2,7 @@
 title: 【杂谈】反思之二
 date: 2023-02-14 10:59:12
 excerpt: 这个时代对人们提出了更高的要求，那就是与时俱进。
-photos: '../images/fs-2.jpg'
+photos: '../images/fs-2.png'
 tags:
 - 反思
 categories:
