chore: 删除部分文件

--- a/source/_posts/【杂谈】反思之二.md
+++ b/source/_posts/【杂谈】反思之二.md
@@ -38,8 +38,8 @@ categories:
 下面两个思考点，是阅读得来的，但是我后续预计的方向不谋而合。  
 1、 web端的图形渲染和AI推理技术门槛高且非常有趣  
 2、 对前端工程化的学习要适当，截取一段[掘金作者](https://juejin.cn/post/7182006463786090552)的话。  
-&nbsp;&nbsp;因为我曾经相信：
-&nbsp;&nbsp;&nbsp;&nbsp;工程化是现代前端的灵魂，深入工程化，就能具备不被淘汰的核心能力。  
+  因为我曾经相信：
+    工程化是现代前端的灵魂，深入工程化，就能具备不被淘汰的核心能力。  
 但很可惜，现在看来，它们帮不了我，也帮不了我的生活。  
 下半年，我开始 尝试更深入业务 。  
 我所处的是 智慧城市 相关的行业。  
@@ -52,20 +52,20 @@ categories:
 #### 自己的想法  
 我给自己2年的时间(从2023年01月01日开始)，要改变现在的境遇，让自己可以掌握自己的工作、生活，希望为时未晚。  
 1、为了保证工作，要有一份可以拿出手的简历  
-&nbsp;&nbsp;要尽量丰富的展示工作内的项目  
-&nbsp;&nbsp;&nbsp;&nbsp;要有自己的项目，有页面可以展示  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如自己之前一直在弄的项目  
-&nbsp;&nbsp;&nbsp;&nbsp;要能扩展自己的社区影响力，比如 segmentFault、掘金  
-&nbsp;&nbsp;&nbsp;&nbsp;要展示自己对开源项目的贡献，比如提交、mr  
+  要尽量丰富的展示工作内的项目  
+    要有自己的项目，有页面可以展示  
+      比如自己之前一直在弄的项目  
+    要能扩展自己的社区影响力，比如 segmentFault、掘金  
+    要展示自己对开源项目的贡献，比如提交、mr  
 <br/>
 2、朝着自己选定的方向，不断深入  
-&nbsp;&nbsp;1、AI方向，达到普通级别  
-&nbsp;&nbsp;&nbsp;&nbsp;AI、人工智能、深度学习、机器学习，这些从未理解的概念，从chatGpt看来，很有可能真的引导一次足以影响未来走向的变革，不能再视为往常了  
-&nbsp;&nbsp;2、深入图形学方向  
-&nbsp;&nbsp;&nbsp;&nbsp;这应该就是我未来的技术方向，不要局限于语言，3d可以做很多东西，人是视觉动物，去在这个技术领域创造更多未来吧  
-&nbsp;&nbsp;3、英语方向学习、考证  
-&nbsp;&nbsp;&nbsp;&nbsp;英语是计算机行业的根本，请一定要熟练，否则所谓的技术深入，只能是镜中花
-&nbsp;&nbsp;4、做视频、争取将号养起来  
-&nbsp;&nbsp;&nbsp;&nbsp;获取一定的话语权，是很重要的，如果你是一个10w人大V，那么相当于你有一次机会，向10w人去传达一次信息的机会
-&nbsp;&nbsp;4、做工具、了解如何挣钱  
-&nbsp;&nbsp;&nbsp;&nbsp;我有一些不错的想法，很小众，是从爱好中衍生的，做起来，去真正的影响更多人，让这段记忆不被时代遗忘 ，如九叠篆（异体字）解析、视频下载网站原理解析等    
+    1、AI方向，达到普通级别  
+        AI、人工智能、深度学习、机器学习，这些从未理解的概念，从chatGpt看来，很有可能真的引导一次足以影响未来走向的变革，不能再视为往常了  
+    2、深入图形学方向  
+        这应该就是我未来的技术方向，不要局限于语言，3d可以做很多东西，人是视觉动物，去在这个技术领域创造更多未来吧  
+    3、英语方向学习、考证  
+        英语是计算机行业的根本，请一定要熟练，否则所谓的技术深入，只能是镜中花
+    4、做视频、争取将号养起来  
+        获取一定的话语权，是很重要的，如果你是一个10w人大V，那么相当于你有一次机会，向10w人去传达一次信息的机会
+    5、做工具、了解如何挣钱  
+        我有一些不错的想法，很小众，是从爱好中衍生的，做起来，去真正的影响更多人，让这段记忆不被时代遗忘 ，如九叠篆（异体字）解析、视频下载网站原理解析等    
