--- a/source/_posts/【读书笔记】结构化思考.md
+++ b/source/_posts/【读书笔记】结构化思考.md
@@ -146,8 +146,8 @@ categories:
 说话的顺序很重要   
 <span style="color:#de4f60 ">顺序不同，则结构不同。结构不同，事物的性质则可能完全不同，比如石墨和钻石。</span>  
 逻辑递进  
-&nbsp;&nbsp;&nbsp;&nbsp;对要阐述的事情进行排序，大致有三种顺序  
-&nbsp;&nbsp;&nbsp;&nbsp;结构顺序、时间顺序、重要性顺序  
+    对要阐述的事情进行排序，大致有三种顺序  
+    结构顺序、时间顺序、重要性顺序  
 
 wswTest: 补充一个流程图   
 复杂的内容内部可能有多重排序方式，去描述其分类、事实、观点。但有一个原则   
@@ -158,13 +158,13 @@ wswTest: 补充一个流程图
 透过结构看表达: 前面强调了结构化、这里是将结构化和表达联合到一起。  
 如何从无到有的去构建结构: <span style="color:#de4f60 ">三个层次、五个步骤</span>   
 第一层  
-&nbsp;&nbsp;&nbsp;&nbsp;1、 理解描述问题  
+    1、 理解描述问题  
 第二层  
-&nbsp;&nbsp;&nbsp;&nbsp;2、 基于目标定主题  
-&nbsp;&nbsp;&nbsp;&nbsp;3、 纵向结构分层次  
-&nbsp;&nbsp;&nbsp;&nbsp;4、 横向结构选顺序  
+    2、 基于目标定主题  
+    3、 纵向结构分层次  
+    4、 横向结构选顺序  
 第三层  
-&nbsp;&nbsp;&nbsp;&nbsp;5、 形象表达做演示  
+    5、 形象表达做演示  
 引出上面的步骤和层次后，补充说明了如何理解说明问题  
 <span style="color:#de4f60 ">5W2H框架描述问题</span>  
 ![结构化思考](../images/struct_think_4.jpeg)  
@@ -248,8 +248,8 @@ wswTest: 补充一个流程图
 
 ## SP19 选择演绎，让说服更有力
 两种模式:   
-&nbsp;&nbsp;&nbsp;&nbsp;标准式: 大前提、小前提、结论  
-&nbsp;&nbsp;&nbsp;&nbsp;常见式: 现象、原因、解决方案  
+    标准式: 大前提、小前提、结论  
+    常见式: 现象、原因、解决方案  
 <br/>
 
 ## SP20 选择归纳，让要点更清晰
@@ -260,8 +260,8 @@ wswTest: 补充一个流程图
 开放式分类: 自己想办法，遵循MECE  
 MECE小工具1: 2*2矩阵 (比如 时间X重要性)  
 最后总结:  
-&nbsp;&nbsp;&nbsp;&nbsp;归纳让观点清晰、条理清晰  
-&nbsp;&nbsp;&nbsp;&nbsp;演绎说服力强  
+    归纳让观点清晰、条理清晰  
+    演绎说服力强  
 <br/>
 
 ## SP21 结构罗盘一张图说清所有工作内容
@@ -290,9 +290,9 @@ MECE小工具1: 2*2矩阵 (比如 时间X重要性)
 
 ## SP25 结构化思维核心内容回顾及练习建议
 1、个人，如何运用  
-&nbsp;&nbsp;&nbsp;&nbsp;多实践。牢记<span style="color:#de4f60 ">论证类比</span>  
+    多实践。牢记<span style="color:#de4f60 ">论证类比</span>  
 2、团队、如何运用  
-&nbsp;&nbsp;&nbsp;&nbsp;不用管他说了啥  
+    不用管他说了啥  
 3、社会，有何益处  
-&nbsp;&nbsp;&nbsp;&nbsp;<span style="color:#de4f60 ">面临不确定性，如何解决问题？  
-&nbsp;&nbsp;&nbsp;&nbsp;思维能力的训练</spam>  
+    <span style="color:#de4f60 ">面临不确定性，如何解决问题？  
+    思维能力的训练</spam>  
