chore: 杂谈2 内容补充

--- a/source/_posts/【杂谈】反思之二.md
+++ b/source/_posts/【杂谈】反思之二.md
@@ -69,3 +69,17 @@ categories:
         获取一定的话语权，是很重要的，如果你是一个10w人大V，那么相当于你有一次机会，向10w人去传达一次信息的机会
     5、做工具、了解如何挣钱  
         我有一些不错的想法，很小众，是从爱好中衍生的，做起来，去真正的影响更多人，让这段记忆不被时代遗忘 ，如九叠篆（异体字）解析、视频下载网站原理解析等    
+<br/>
+3、技术研发的目标如何选定，目前我这边的目标是什么  
+  计划是两年内结束目前没有方向的状态，并有所成就，比如在自己的行业能挣到钱，实现理想。  
+  开始是短期目标，如发展顺利，则可能是一个长期的职业目标。  
+  因此一定要先选好目标，不能过快的或者灵光一闪式的定下目标，也不能拿优柔寡断、无所适从。  
+  定目标以三个月到半年为佳，从2023年02月16日，不晚于2023年08月01日，定下要做的哪些事情。  
+
+	1、下个boss直聘，看看这帮人都在干什么，我能不能干，我改怎么干？    
+	2、跨端能力，速度掌握，多种能力掌握开发。  
+	3、瞄一瞄，创业小公司，都在搞什么，我们怎么搞好这些东西。  
+
+  选完目标后，也面临一个现实问题，这些可能这是我的个人努力，实际上要切换过去，还是很困难的，要开始为自己创造契机。  
+  一定要想好，怎么去切换赛道，怎么去搞。  
+	说白了，你自己选的道路，但是，学这个目的是什么，或者有目的，怎么往这个目的上跑？  
