chore: 【杂谈】反思之二 添加对于前端行业的反思

--- a/source/_posts/【杂谈】反思之二.md
+++ b/source/_posts/【杂谈】反思之二.md
@@ -83,3 +83,20 @@ categories:
   选完目标后，也面临一个现实问题，这些可能这是我的个人努力，实际上要切换过去，还是很困难的，要开始为自己创造契机。  
   一定要想好，怎么去切换赛道，怎么去搞。  
 	说白了，你自己选的道路，但是，学这个目的是什么，或者有目的，怎么往这个目的上跑？  
+
+4、关于前端都在干啥的思考  
+  通常前端指的就是在浏览器里写页面，然后兼容不同的浏览器和设备。  
+  有一种更加宽泛的前端，指的是写用户可视化界面(UI)，不限制具体语言、具体环境(不管用的是浏览器还是啥的)。  
+  这些写页面的活，对于从事其中的手工业者，提出了两个常见的需求:   
+  1. 页面写的快
+     1. 这个快不是指的一时的快，而是各种方面的快，比如不同设备之间，要快。不同产品思路下，要快。  
+     2. 这里就会引出架构设计，主要是怎么去设计架构，才能搞定这种快。  
+  2. 要节约  
+     1. 节约物料，比如流量、服务器资源、人力、开发时间等不一而足。  
+     2. 上面说的成本，除了损耗成本，还有就是开发成本，常见的说法就是一套代码多端运行。  
+  所以搞出了一个词: 降本增效。  
+  这是市场对于前端的要求，个人感觉，这是一种耗材。  
+  好钢用在刀刃上，谁会在关键地点要求越快越好，越便宜越好。究其原因，前端更多的是展示，做生意又不是看看就行。  
+  这个行业一定还会继续存在，但是狭窄意义上的前端，也就是在浏览器里面写页面，则会逐渐退出行业。  
+  流量的价格越来越便宜，包更新的方式越来越便捷，浏览器也好，环境差异也好，会逐渐被忽视。  
+  我向来不喜欢做预言，因为预言大多被打脸，而且做预言的人往往对行业并无过深研究。但我已转向开始预测了，因为这是验证人对未来的预判。在社会中，判断力低下也不过是影响竞争力罢了，但是不敢判断、预测，直接就丧失了进入未来的船票。  
