chore: 反思2加上两句

--- a/source/_posts/【杂谈】反思之二.md
+++ b/source/_posts/【杂谈】反思之二.md
@@ -100,3 +100,6 @@ categories:
   这个行业一定还会继续存在，但是狭窄意义上的前端，也就是在浏览器里面写页面，则会逐渐退出行业。  
   流量的价格越来越便宜，包更新的方式越来越便捷，浏览器也好，环境差异也好，会逐渐被忽视。  
   我向来不喜欢做预言，因为预言大多被打脸，而且做预言的人往往对行业并无过深研究。但我已转向开始预测了，因为这是验证人对未来的预判。在社会中，判断力低下也不过是影响竞争力罢了，但是不敢判断、预测，直接就丧失了进入未来的船票。  
+
+  有关注，会说故事，才能号召愿意一起做事的人。  
+	首先，你要会挣钱，然后找对人群，然后开始说故事，最后一起挣钱。  
