feat: 解决debug命令报错，删除无用scripts文件

--- a/source/_posts/【投资】2023年第一次收益率整理.md
+++ b/source/_posts/【投资】2023年第一次收益率整理.md
@@ -1,7 +1,7 @@
 ---
 title: 【投资】2023年第一次收益率整理
 date: 2023年8月13日22:28:04
-excerpt:
+excerpt: 整理投资收益率
 photos: '../images/vscode-config-check3.jpg'
 tags:
   - 投资
